--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 <script>
 /*** 1) SADECE BURAYI DÜZENLE — kendi anahtarını çift tırnak içine yapıştır ***/
-const OPENAI_API_KEY = "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"; // örn: "sk-proj-xxxxxxxx"
+const OPENAI_API_KEY = "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" // örn: "sk-proj-xxxxxxxx"
 
 /*** 2) Basit durum ***/
 const $ = (id)=>document.getElementById(id);
